--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -25,6 +25,11 @@ a:visited {
 a, button {
   cursor: pointer;
 }
+
+.mypage_container{
+	width: 1120px;
+    margin: 0 auto;
+}
 /* mypage_banner_list */
 .mypage_all {
 	width: 100%;
@@ -39,19 +44,19 @@ a, button {
 }
 
 .mypage_banner {
-	height: 250px;
-	margin-left: 120px;
+    height: 250px;
+    width: 1120px;
+    margin: 0 auto;
+    padding-top: 65px;
 }
 
 #mypage_user_name {
 	font-size: 25px;
-	font-weight: 500;
-	margin-left: 200px;
-	margin-top: 20px;
-	padding: 50px;
-	line-height: 50px;
-	color: white;
-	float: left;
+    font-weight: 500;
+    line-height: 50px;
+    color: white;
+    float: left;
+    padding-top: 8px;
 }
 
 strong {
@@ -60,50 +65,44 @@ strong {
 }
 
 .mypage_top_right_c {
-	float: right;
-	background-color: white;
-	border-radius: 5px;
-	margin-top: 70px;
-	margin-right: 400px;
+    float: right;
+    background-color: white;
+    border-radius: 5px;
 }
 
 #mypage_top_right_i {
-	display: inline-block;
-	/* 	margin-top: 50px; */
-	padding: 5px;
-	width: 800px;
-	height: 120px;
+    display: inline-block;
+    padding: 22px 1px;
 }
 
 #mypage_top_dl {
-	/* 	margin: 20px; */
-	height: 50px;
-	display: inline-block;
-	vertical-align: baseline;
-	text-align: center;
-	margin-left: 80px;
+    padding: 6px 87px;
+    display: inline-block;
+    text-align: center;
+    text-align: center;
+    border-right: 1px solid #e6e4e4;
 }
 
 #mypage_top_dt {
-	float: left;
-	font-size: large;
-	font-weight: 500;
-	margin-top: 20px;
-	margin-left: 50px;
+    font-size: large;
+    font-weight: 500;
+    line-height: 23px;
+    text-align: left;
 }
 
 #mypage_top_dd {
-	color: #6FFFC4;
-	font-size: x-large;
-	font-weight: 900;
-	clear: both;
-	margin-top: 20px;
-	margin-left: 50px; 
-	
+	color: #46cfa7;
+    font-size: x-large;
+    font-weight: 900;
+    clear: both;
+    line-height: 40px;
 }
 
+.mypage_left_div {
+	display: inline-block;
+}
 .mypage_left_section{
- margin-bottom: 80px;	
+	margin: 59px 0;
 }
 
 .mypage_left_menu_section {
@@ -112,112 +111,109 @@ strong {
 	margin-bottom: 50px;
 }
 
-#mypage_left_menu {
-	margin-left: 380px;
-	margin-top: 30px;
+#mypage_left_menu_top {
+	margin-bottom: 45px;
+}
+#mypage_left_menu_bottom {
 }
 
 #mypage_left_title {
-	font-size: large;
+	font-size: 18px;
+    color: #222;
 }
 
 #mypage_menu_list {
 	width: 200px;
+    margin: 18px 0px;
 }
 
 #mypage_list_a {
-	color: #3c3c3c;
+	color: #3a3a3a;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 #mypage_list {
 	padding-top: 20px;
-	padding-bottom: 20px;
-	border-bottom: 0.5px solid #969696;
-	font-weight: 500;
+    padding: 15px 0;
+    border-bottom: 0.5px solid #e3e0e0;
+    font-weight: 500;
 }
 
 /* mypage_main */
 .mypage_center_c {
 	float: right;
-	margin-right: 400px;
-	margin-top: 30px;
-	background-color: #fff9ee;
-	text-align: 5px;
+    display: inline-block;
+    position: absolute;
+
 }
 
 #mypage_center_i {
 	display: inline-block;
-	height: 230px;
-	width: 800px;
 }
 
 #mypage_center_subject {
 	font-size: x-large;
-	font-weight: 900;
-	background-color: white;
-	padding: 10px;
+    font-weight: 900;
+    background-color: white;
+    line-height: 35px;
 }
 
 #mypage_title_r {
-	color: #969696;
-	font-size: medium;
+    color: #969696;
+    font-size: medium;
 }
 
 .mypage_center_list {
-	margin-top: 20px;
-	margin-left: 50px;
+    display: inline-block;
+    background-color: #fff9ee;
 }
 
 #mypage_center_dl {
-	float: left;
-	padding: 50px;
-	text-align: center;
+    text-align: center;
+    display: inline-block;
+    margin: 37px 65px;;
 }
 
 #mypage_center_dt {
-	padding-bottom: 20px;
-	line-height: 1.5;
-	font-size: large;;
-	font-weight: 800;
-	color: #66F8F0;
+    padding-bottom: 20px;
+    line-height: 20px;
+    font-size: 24px;
+    font-weight: 800;
+    color: #66F8F0;
 }
 
 #mypage_center_dd {
 	line-height: 1.5;
-	font-size: large;;
-	font-weight: 800;
+    font-size: 18px;
+    font-weight: 500;
+    color: #222;
 }
 
 .mypage_main {
-	display: block;
-	float: right;
-	margin-right: 400px;
-	background-image: url("../img/mypage_main.png");
-	width: 800px;
-	height: 320px;
-	margin-top: 30px;
+    display: inline-block;
+    background-image: url(../img/mypage_main.png);
+    width: 800px;
 }
 
 #mypage_main_subject {
 	font-size: x-large;
-	font-weight: 900;
-	background-color: white;
-	padding: 10px;
+    font-weight: 900;
+    background-color: white;
+    padding: 10px;
 }
 
 #mypage_main_dl {
 	margin: 20px;
-	margin-top: 50px;
+    margin-top: 50px;
 }
 
 #mypage_main_dt {
-/* 	margin: 20px; */
-	font-size: mediuml;
 	font-weight: 900;
-	color: #FFD228;
-	margin: 10px;
-	clear: both;
-	margin-bottom: 10px; 
+    color: #FFD228;
+    margin: 10px;
+    clear: both;
+    margin-bottom: 10px;
 }
 
 #mypage_main_dd_one {
